--- a/package.json
+++ b/package.json
@@ -3,30 +3,15 @@
   "type": "module",
   "scripts": {
     "start": "node ./app.js",
-    "dev": "nodemon ./app.js",
-    "test": "jest"
+    "dev": "nodemon ./app.js"
   },
   "dependencies": {
-    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
     "express": "^4.18.2",
-    "gravatar": "^1.8.2",
     "joi": "^17.11.0",
-    "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.2",
-    "nanoid": "^5.1.5",
-    "nodemailer": "^6.10.1",
-    "pg": "^8.14.1",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.10",
-    "@babel/preset-env": "^7.26.9",
-    "babel-jest": "^29.7.0",
-    "jest": "^29.7.0",
     "nodemon": "^3.0.2"
   }
 }
